<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="cn.bingoogolapple.refreshlayout.salemobile.shipment.shipment">
 <!--   android:textColorHint="@android:color/darker_gray"
    android:background="@drawable/bg_edittext_normal"-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        >


    <TableLayout
        android:id="@+id/tablelayout02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        >
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/brand_name"
                android:id="@+id/textView_brand"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:background="@drawable/bg_edittext_normal"
                android:ems="10"
                android:padding="15dip"
                android:textColor="@android:color/black"
                android:layout_margin="10dp"
                android:id="@+id/edit_shipment_brand"
                android:editable="false"/>

        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/model_name"
                android:id="@+id/text_model"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:background="@drawable/bg_edittext_normal"
                android:ems="10"
                android:padding="15dip"
                android:textColor="@android:color/black"
                android:layout_margin="10dp"
                android:id="@+id/edit_model"
                android:editable="false"/>

        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/barcode_name"
                android:id="@+id/textView_barcode"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textColorHint="@android:color/darker_gray"
                android:background="@drawable/bg_edittext_normal"
                android:ems="10"
                android:padding="15dip"
                android:textColor="@android:color/black"
                android:layout_margin="10dp"
                android:id="@+id/edit_barcode"
                android:editable="false"/>

        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/model_price"
                android:id="@+id/textView_price"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColorHint="#AAAAAA"
                android:background="@drawable/bg_edittext_normal"
                android:ems="10"
                android:padding="15dip"
                android:textColor="@android:color/black"
                android:layout_margin="10dp"
                android:id="@+id/edit_price"/>

        </TableRow>

    </TableLayout>

        <TableLayout
            android:id="@+id/tablelayout01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:stretchColumns="0"
            >
            <TableRow>
                <Button
                    android:id="@+id/btn_scan_shipment"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey_0"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/login_btn"
                    android:text="@string/text_scan"
                    android:layout_margin="4dp" />

            </TableRow>
        </TableLayout>


        <TableLayout
            android:id="@+id/tablelayout03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1,2"
            android:gravity="bottom">

            <TableRow>
                <Button
                    android:id="@+id/btn_shipment_save"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey_0"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/login_btn"
                    android:text="@string/text_save"
                    android:layout_margin="10dp"
                    android:layout_column="1"/>
                <Button
                    android:id="@+id/btn_shipment_cancel"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey_0"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/login_btn"
                    android:text="@string/text_cancel"
                    android:layout_margin="10dp"/>
            </TableRow>
        </TableLayout>
</LinearLayout>

</RelativeLayout>
